--- a/boot/src/main/resources/templates/admin/index.html
+++ b/boot/src/main/resources/templates/admin/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div class="container mt-5">
+    <a href="/user" class="btn btn-primary mb-3">Пользовательская панель</a>
     <h1>Админ-Панель</h1>
     <a href="/admin/new" class="btn btn-success mb-3">Создать нового пользователя</a>
 
@@ -32,6 +33,7 @@
         </tr>
         </tbody>
     </table>
+
     <a href="/logout" class="btn btn-secondary">Выход</a>
 </div>
 </body>
