--- a/boot/src/main/resources/templates/admin.html
+++ b/boot/src/main/resources/templates/admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="utf-8">
+	<meta charlist="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Admin</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -13,12 +13,13 @@
 <nav class="navbar navbar-dark bg-dark">
 	<div class="container-fluid">
 		<div class="col-11 text-left" style="margin-top: 0.2%">
-			<ul class="list-inline h5">
-				<li class="list-inline-item text-white text-strong navbar-brand"
-					th:utext="${authUser.getName()}"></li>
+			<ul class="list-inline h5" id="headAuthUser">
+
+				<li th:text="${#authentication.principal.getName}" class="list-inline-item text-white text-strong navbar-brand"
+					id="headerUsername"></li>
 				<li class="list-inline-item text-white navbar-brand">with roles:</li>
-				<span th:each="role: ${authUser.getRoles()}">
-            <li class="list-inline-item text-white navbar-brand" th:utext="${role.getRoleNameWithoutPrefix()}">
+				<span th:each="role: ${#authentication.principal.roles}">
+            <li th:utext="${role. getRoleNameWithoutPrefix()}" class="list-inline-item text-white navbar-brand" id="headerRoles">
               <strong></strong></li>
             </span>
 
@@ -69,148 +70,8 @@
 								<th>Delete</th>
 							</tr>
 							</thead>
-							<tbody th:each="user: ${users}">
-							<td th:utext="${user.getId()}"></td>
-							<td th:utext="${user.getName()}">Name</td>
-							<td th:utext="${user.getSurname()}">Surname</td>
-							<td th:utext="${user.getAge()}">Age</td>
-
-							<td>
-								<div th:each="role : ${user.getRoles()}">
-									<div th:text="${role.getRoleNameWithoutPrefix()}">user</div>
-								</div>
-							</td>
-							<td>
-								<button class="btn btn-info" data-toggle="modal" th:data-target="${'#editModal'+ user.getId()}">
-									Edit
-								</button>
-							</td>
-							<td>
-								<button class="btn btn-danger" data-toggle="modal" th:data-target="${'#deleteModal'+ user.getId()}">
-									Delete
-								</button>
-							</td>
-							<div id="editModal" class="modal fade" th:id="${'editModal'+ user.getId()}">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h1 class="modal-title fs-5" id="editLabel">Edit user</h1>
-											<button type="button" class="btn-close"
-													data-dismiss="modal" aria-label="Close"></button>
-										</div>
-										<div class="modal-body">
-											<form id="formEditUser" th:method="PATCH" th:action="@{/admin/{id}(id=${user.getId()})}"
-												  th:object="${user}" >
-												<div class="mb-3">
-													<label for="idEdit" class="col-form-label">ID</label>
-													<input type="text" name = "id"
-														   class="form-control" id="idEdit"
-														   th:value="${user.getId()}"
-														   readonly/>
-												</div>
-												<div class="mb-3">
-													<label for="nameEdit" class="col-form-label">Name</label>
-													<input type="text" name = "name"
-														   class="form-control"  id="nameEdit"
-														   th:value="${user.getName()}"/>
-												</div>
-												<div class="mb-3">
-													<label for="SurnameEdit" class="col-form-label">Surname</label>
-													<input type="text" name = "surname"
-														   class="form-control" id="SurnameEdit"
-														   th:value="${user.getSurname()}">
-												</div>
-												<div class="mb-3">
-													<label for="ageEdit" class="col-form-label">Age</label>
-													<input type="number" name = "age"
-														   class="form-control" id="ageEdit"
-														   th:value="${user.getAge()}"/>
-												</div>
-
-												<div class="mb-3">
-													<label for="passEdit" class="col-form-label">Пароль</label>
-													<input type="password" name="password"
-														   class="form-control" id="passEdit"
-														   minlength="2" maxlength="20"
-														   placeholder="Введите новый пароль (оставьте пустым, если не хотите менять)" />
-												</div>
-
-
-												<label for="roles"><b>Role</b></label>
-												<select multiple class="form-control"
-														id="roles" name="roles"
-														th:size="${roles.size()}"
-														required>
-													<option th:each="role:${roles}"
-															th:value="${role.id}"
-															th:selected="${user.getRoles().contains(role)}">
-														<th:block th:text="${role.getRoleNameWithoutPrefix()}">
-														</th:block>
-													</option>
-												</select>
-												<div class="modal-footer">
-													<button type="button" class="btn btn-secondary" data-dismiss="modal" aria-label="Close">Close</button>
-													<button type="submit" class="btn btn-primary">Edit</button>
-												</div>
-											</form>
-										</div>
-
-									</div>
-								</div>
-							</div>
-
-
-							<div th:id="${'deleteModal'+ user.getId()}" class="modal fade">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h1 class="modal-title fs-5" id="deleteLabel">Delete user</h1>
-											<button type="button" class="btn-close"
-													data-dismiss="modal" aria-label="Close"></button>
-										</div>
-										<div class="modal-body">
-											<form id="formDeleteUser" th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
-												<div class="mb-3">
-													<label for="idDelete" class="col-form-label">ID</label>
-													<input type="text" name = "id"
-														   class="form-control" id="idDelete" th:value="${user.getId()}" readonly/>
-												</div>
-												<div class="mb-3">
-													<label for="nameDelete" class="col-form-label">Name</label>
-													<input type="text" name = "name"
-														   class="form-control" id="nameDelete" th:value="${user.getName()}" readonly/>
-												</div>
-												<div class="mb-3">
-													<label for="SurnameDelete" class="col-form-label">Surname</label>
-													<input type="text" name = "Surname"
-														   class="form-control" id="SurnameDelete" th:value="${user.getSurname()}" readonly>
-												</div>
-												<div class="mb-3">
-													<label for="ageDelete" class="col-form-label">Age</label>
-													<input type="number" name = "age"
-														   class="form-control" id="ageDelete" th:value="${user.getAge()}" readonly/>
-												</div>
-
-												<div class="mb-3">
-													<label for="passDelete" class="col-form-label">Password</label>
-													<input type="password" name = "password"
-														   class="form-control" id="passDelete"
-														   required minlength="2" maxlength="20" th:value="${user.getPassword()}" readonly/>
-												</div>
-												<div>Roles</div>
-												<div th:each="role : ${user.getRoles()}">
-													<div th:text="${role.getRoleNameWithoutPrefix()}">user</div>
-												</div>
-												<div class="modal-footer">
-													<button type="button" class="btn btn-secondary" data-dismiss="modal" aria-label="Close">Close</button>
-													<button type="submit" class="btn btn-danger" >Delete</button>
-												</div>
-											</form>
-										</div>
-
-									</div>
-								</div>
-							</div>
+							<tbody id = "allUsersTable">
+									
 							</tbody>
 						</table>
 					</div>
@@ -281,7 +142,6 @@
 		</div>
 
 	</div>
-
 	<div role="tabpanel" class="tab-pane " id="user">
 		<div class="d-flex align-content-center flex-wrap" style="height: 100px">
 			<h1 class="display-3">User information-page</h1>
@@ -297,23 +157,123 @@
 				<th>Roles</th>
 			</tr>
 			</thead>
-			<tbody>
-			<td th:utext="${authUser.getId()}">Id</td>
-			<td th:utext="${authUser.getName()}">Name</td>
-			<td th:utext="${authUser.getSurname()}">Surname</td>
-			<td th:utext="${authUser.getAge()}">Age</td>
+			<tbody id="authUserTable">
+			<td th:utext="${#authentication.principal.id}">Id</td>
+			<td th:utext="${#authentication.principal.name}">Name</td>
+			<td th:utext="${#authentication.principal.surname}">Surname</td>
+			<td th:utext="${#authentication.principal.age}">Age</td>
 			<td>
-				<div th:each="role : ${authUser.getRoles()}">
+				<div th:each="role : ${#authentication.principal.roles}">
 					<div th:text="${role.getRoleNameWithoutPrefix()}">user</div>
 				</div>
 			</td>
 			</tbody>
 		</table>
-
 	</div>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	</div>
+</div>
+<div id="edit" class="modal fade">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h1 class="modal-title fs-5" id="editLabel">Edit user</h1>
+				<button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<form id="formEditUser" th:method="PATCH">
+
+					<div class="mb-3">
+						<label for="idEdit" class="col-form-label">ID</label>
+						<input type="text" name="id" class="form-control" id="idEdit" readonly />
+					</div>
+					<div class="mb-3">
+						<label for="nameEdit" class="col-form-label">Name</label>
+						<input type="text" name="name" class="form-control" id="nameEdit" />
+					</div>
+					<div class="mb-3">
+						<label for="SurnameEdit" class="col-form-label">Surname</label>
+						<input type="text" name="surname" class="form-control" id="SurnameEdit">
+					</div>
+					<div class="mb-3">
+						<label for="ageEdit" class="col-form-label">Age</label>
+						<input type="number" name="age" class="form-control" id="ageEdit" />
+					</div>
+
+					<div class="mb-3">
+						<label for="passEdit" class="col-form-label">Password</label>
+						<input type="password" name="password" class="form-control" id="passEdit" />
+					</div>
+					<label class="container-fluid col-6" for="rolesEditUser"><strong>Role</strong>
+						<select class="form-control" id="rolesEditUser" name="roles" multiple size="2">
+
+						</select>
+					</label>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" id="editFormCloseButton" data-dismiss="modal" aria-label="Close">Close</button>
+						<button type="submit" class="btn btn-primary">Edit</button>
+					</div>
+				</form>
+			</div>
+
+		</div>
+	</div>
+</div>
+
+
+<div class="modal fade" id="delete">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h1 class="modal-title fs-5" id="deleteLabel">Delete user</h1>
+				<button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<form id="formDeleteUser">
+					<div class="mb-3">
+						<label for="idDelete" class="col-form-label">ID</label>
+						<input type="text" name="id" class="form-control" id="idDelete" readonly />
+					</div>
+					<div class="mb-3">
+						<label for="nameDelete" class="col-form-label">Name</label>
+						<input type="text" name="name" class="form-control" id="nameDelete" readonly />
+					</div>
+					<div class="mb-3">
+						<label for="surnameDelete" class="col-form-label">Surname</label>
+						<input type="text" name="surname" class="form-control" id="surnameDelete" readonly>
+					</div>
+					<div class="mb-3">
+						<label for="ageDelete" class="col-form-label">Age</label>
+						<input type="number" name="age" class="form-control" id="ageDelete" readonly />
+					</div>
+
+					<div class="mb-3">
+						<label for="passDelete" class="col-form-label">Password</label>
+						<input type="password" name="password" class="form-control" id="passDelete" required minlength="2"
+							maxlength="20" readonly />
+					</div>
+					<label class="container-fluid col-6" for="rolesDeleteUser"><strong>Role</strong>
+						<select class="form-control" id="rolesDeleteUser" name="roles" multiple size="2" disabled>
+
+						</select>
+					</label>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal" id="deleteFormCloseButton" aria-label="Close">Close</button>
+						<button type="submit" class="btn btn-danger" >Delete</button>
+					</div>
+				</form>
+			</div>
+
+		</div>
+	</div>
+</div>
+	<script src="jquery-3.6.3.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+	<script src="usersTable.js"></script>
+	<script src="newUser.js"></script>
+	<script src="deleteModal.js"></script>
+	<script src="deleteUser.js"></script>
+    <script src="editModal.js"></script>
+	<script src="editUser.js"></script>
 </body>
 </html>
